Fix spacing after caret

--- a/src/components/primary/toolbar/_toolbar.scss
+++ b/src/components/primary/toolbar/_toolbar.scss
@@ -17,6 +17,10 @@
             margin-right: 12px;
             @include FontBase;
         }
+        // Caret (when a thread is open)
+        .caret-3W7cBB{
+            margin-right: 12px;
+        }
         // Remove divider
         .divider-3FBTu8{
             display: none;
